agb on start screen

--- a/public/templates/agb/agb-kiso-de.html
+++ b/public/templates/agb/agb-kiso-de.html
@@ -10,18 +10,16 @@
 				<li><strong>Verbindlichkeit</strong>
 					<p>Die Anmeldung wird erst durch die endgültige Bestätigung durch den Jugenddienst Bozen rechtsgültig und verbindlich, welche wiederum erst nach Zahlungseingang des vollen Teilnahmebeitrages erfolgt (siehe  Punkt 2.2).</p>
 				</li>
-				<li><strong>Privacy</strong>
-					<p>Für die Abwicklung der Anmeldung ist die Verarbeitung und Speicherung der personenbezogenen Daten erforderlich. Wie der Jugenddienst mit diesen Daten verfährt, ist im Aufklärungsschreiben laut G.v.D. 196/03 nachzulesen.</p>
-				</li>
 			</ul>
 		</li>
 		<li><strong>Teilnahmebeitrag</strong>
 			<ul>
 				<li><strong>Beitragshöhe und Zahlungsmodalitäten</strong>
-					<p>Der Teilnahmebeitrag beträgt 80,00 Euro pro Woche. Bei Anmeldung von weiteren Geschwisterkindern für die selbe Woche, wird auf jedes zusätzliche Kind ein Rabatt von 10,00 Euro gewährt. Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen bei der Raiffeisenkasse Bozen (IBAN: IT 58 J 08081 11600 000305003229) eingezahlt werden.</p>
+					<p>Der Teilnahmebeitrag beträgt 80,00 Euro pro Woche und Kind. Darin sind eine tägliche Jause, Mittagessen sowie ein KiSo-T-Shirt enthalten. Wer das Projekt unterstützen möchte, kann also mit einem entsprechenden Solidaritätszuschlag auch 90,00 Euro pro Woche und Kind bezahlen. (Anmerkung: Der so genannte „Realpreis“ würde sich pro Woche auf rund 240,00 Euro belaufen.)</p>
+					<p>Bei Anmeldung von weiteren Geschwisterkindern für die selbe Woche, wird auf jedes zusätzliche Kind ein Rabatt von 10,00 Euro gewährt. Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen bei der Raiffeisenkasse Bozen (IBAN: IT 58 J 08081 11600 000305003229) eingezahlt werden.</p>
 				</li>
 				<li><strong>Zahlungsfrist</strong>
-					<p>Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen innerhalb von fünf Werktagen ab Versand der Zahlungsaufforderung eingezahlt werden. Bei der Überweisung muss als Einzahlungsgrund „KISO 2018“ und der Name der TeilnehmerInnen angegeben werden. Die Anmeldung ist erst mit dem Eingang des vollen Teilnahmebeitrages gültig, nach Ablauf der Zahlungsfrist wird das Kind ohne zusätzlicher Zahlungsaufforderung auf die Warteliste gesetzt.</p>
+					<p>Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen innerhalb von fünf Werktagen ab Versand der Zahlungsaufforderung eingezahlt werden. Bei der Überweisung muss als Einzahlungsgrund „KISO 2019“ und der Name der TeilnehmerInnen angegeben werden. Die Anmeldung ist erst mit dem Eingang des vollen Teilnahmebeitrages gültig, nach Ablauf der Zahlungsfrist wird das Kind ohne zusätzlicher Zahlungsaufforderung auf die Warteliste gesetzt.</p>
 				</li>
 				<li><strong>Rückerstattung</strong>
 					<p>Der Teilnahmebeitrag wird nur im Falle bescheinigter Krankheit (d.h. Vorlage ärztliches Zeugnis) oder unvorhersehbarer Ereignisse in voller Höhe zurückerstattet. Bei einer Abmeldung vor Beginn der 1. KiSo-Woche werden 50% des bezahlten Teilnahmebeitrages einbehalten.  Bei Abmeldungen nach Beginn der 1. KiSo-Woche wird der volle Teilnahmebeitrag einbehalten.</p>
@@ -32,8 +30,8 @@
 			<p>Alle KiSo-TeilnehmerInnen sind während der Austragung des Programms über die von der Arbeitsgemeinschaft der Jugenddienste (AGJD) abgeschlossene Haftpflichtversicherung auf Schäden gegen Dritte gedeckt.</p>
 			<p>Die Eltern bzw. Erziehungsberechtigten übernehmen die Verantwortung für den Hin- und Rückweg des Kindes zum KiSo-Austragungsort. Untertags werden die Kinder von den BetreuerInnen beaufsichtigt.</p>
 		</li>
-		<li><strong>Fotos und Filmaufnahmen</strong>
-			<p>Zu Dokumentations und PR-Zwecken werden während des KiSo Fotos und Filmaufnahmen der TeilnehmerInnen gemacht und ggf. veröffentlicht werden. Aus der Veröffentlichung entsteht für den Jugenddienst keinerlei wirtschaftlicher Vorteil, dementsprechend können von den abgebildeten Personen keine Entschädigung oder andere Rechte geltend gemacht werden. Gegen die Verwendung von Fotos mit identifizierbaren Personen kann seitens der Eltern jederzeit Einspruch erhoben werden.</p>
+		<li><strong>Beeinträchtigung und Aufsicht</strong>
+			<p>Bei jeglichen körperlichen oder geistigen Beeinträchtigungen bzw. Nahrungsmittel-Unverträglichkeiten eines teilnehmenden Kindes müssen die Eltern innerhalb einer Frist von zwei Wochen ab erfolgter Anmeldung dem Jugenddienst Bozen ein entsprechendes ärztliches Zeugnis vorlegen. Andernfalls wird der Jugenddienst Bozen dies während des Projekts nicht berücksichtigen.</p>
 		</li>
 		<li><strong>Allgemein</strong>
 			<p>Mit der Anmeldung erklärt sich das Elternteil und Erziehungsberechtigter mit obigen Bedingungen einverstanden. Für Rückfragen stehen die MitarbeiterInnen des Jugenddienst Bozen gerne zur Verfügung.</p>
