--- a/public/templates/header/menu.html
+++ b/public/templates/header/menu.html
@@ -1,6 +1,7 @@
 <div class='collapse navbar-collapse' id='mainnav'>
     <ul class='nav navbar-nav'>
         <li><a id='nav_link_info' href='/#/info'>{{'NAV.INFO' | translate}}</a></li>
+        <li><a id='nav_link_agb' href='/#/agb'>{{'NAV.AGB' | translate}}</a></li>
         <li><a id='nav_link_programme' href='/#/'>{{'NAV.PROGRAM' | translate}}</a></li>
         <li ng-show='iSvc.isAuthenticated()'><a id='nav_link_myres' href='/#/myRegistrations'>{{'NAV.MYRES' | translate}}</a></li>
         <li ng-show='iSvc.isAuthorized("fadmin")'><a href='/#/myCommitments'>{{'NAV.MYCOMMITS' | translate}}</a></li>
