--- a/public/templates/agb/agb-kiso-it.html
+++ b/public/templates/agb/agb-kiso-it.html
@@ -10,18 +10,16 @@
 				<li><strong>Vincolanza</strong>
 					<p>L’ iscrizione sarà definitiva a tutti gli effetti solo dopo la conferma da parte dello Jugenddienst Bozen, dopo la verifica dell'avvenuto accredito (vedi punto 2.2).</p>
 				</li>
-				<li><strong>Privacy</strong>
-					<p>Per lo svolgimento dell’ iscrizione é neccessario il trattamento e la memorizzazione dei dati personali. Per le condizioni del trattamento dei dati da parte del Jugenddienst Bozen, si prega di leggere l‘informativa clienti secondo il DLGS 196/03.</p>
-				</li>
 			</ul>
 		</li>
 		<li><strong>Quota d’iscrizione</strong>
 			<ul>
 				<li><strong>Importo e modalitá di pagamento</strong>
-					<p>La quota d’iscrizione ammonta a 80,00 Euro per settimana. Per l’iscrizione di ogni successivo frattello/sorella alla medesima settimana verrà concesso uno sconto di 10,00 euro. La quota deve essere versata tramite bonifico bancario sul conto corrente intestato allo Jugenddienst Bozen (Cassa rurale di Bolzano, IBAN: IT 58 J 08081 11600 000305003229).</p>
+					<p>La quota di partecipazione è di 80,00 Euro a settimana e per bambino. Questo include uno spuntino giornaliero, il pranzo e una maglietta KiSo. Se volete sostenere il progetto, potete pagare 90,00 Euro a settimana per bambino con un supplemento di solidarietà. (Nota: Il cosiddetto "prezzo reale" ammonterebbe a circa 240,00 Euro a settimana).</p>
+					<p>Per l’iscrizione di ogni successivo fratello/sorella alla medesima settimana verrà concesso uno sconto di 10,00 euro. La quota deve essere versata tramite bonifico bancario sul conto corrente intestato allo Jugenddienst Bozen (Cassa rurale di Bolzano, IBAN: IT 58 J 08081 11600 000305003229).</p>
 				</li>
 				<li><strong>Scadenza di pagamento</strong>
-					<p>La quota d’iscrizione deve essere versata tramite bonifico bancario sul conto corrente dello Jugenddienst Bozen entro cinque giorni lavorativi dall’invio dell’avviso di pagamento. Come causale nel bonifico deve essere inserito „KISO 2018“ con il nome del/la partecipante. L’iscrizione é soltante valida dal momento dell’accredito della intera quota d’isrizione. Scaduto il termine di pagamento, il /la figlio/a iscritto sará spostato/a sulla lista d’attesa, senza ulteriore avviso di pagamento.</p>
+					<p>La quota d’iscrizione deve essere versata tramite bonifico bancario sul conto corrente dello Jugenddienst Bozen entro cinque giorni lavorativi dall’invio dell’avviso di pagamento. Come causale nel bonifico deve essere inserito „KISO 2019“ con il nome del/la partecipante. L’iscrizione é soltanto valida dal momento dell’accredito della intera quota d’iscrizione. Scaduto il termine di pagamento, il /la figlio/a iscritto sarà spostato/a sulla lista d’attesa, senza ulteriore avviso di pagamento.</p>
 				</li>
 				<li><strong>Rimborso</strong>
 					<p>La somma completa della quota d’iscrizione verrá rimborsata solo nei casi di malattia (a presentazione dell‘ attestato medico) oppure impedimento per eventi imprevedibili. In tutti gli altri casi di disdetta della prima settimana del KiSo, verrá rimborsata solamete il 50% della quota d’iscrizione. In caso di disdetta dopo la partenza della prima settimana del KiSo, la quota d’iscrizione non verrá piú rimborsata.</p>
@@ -31,8 +29,8 @@
 		<li><strong>Assicurazione e sorveglianza</strong>
 			<p>I genitori sono responsabili per il trasporto (andata e ritorno) dei loro figli al rispettivo luogo del KiSo. Durante l’orario del KiSo, i/le partecipanti saranno sorvegliati/e dagli assistenti pedagogici.</p>
 		</li>
-		<li><strong>Foto e immagini video</strong>
-			<p>Ai fini di documentazione e relazioni pubbliche, durante il KiSo verranno scattate foto ed verranno fatte delle riprese dei partecipanti che eventualmente potranno essere pubblicate. La pubblicazione del materiale non comporterà alcun vantaggio commerciale per il Jugenddienst Bozen, di conseguenza non si potranno richiedere risarcimenti di nessun tipo. Un genitore deve esprimere il suo dissenso a riguardo, prima dell’inizio del KiSo.</p>
+		<li><strong>Handicap e intolleranze alimentari</strong>
+			<p>In caso di handicap fisici o mentali oppure intolleranze alimentari di un/a bambino/a partecipante, i genitori devono presentare un certificato medico al Jugenddienst Bozen entro due settimane dall'iscrizione. In caso contrario, il Jugenddienst Bozen non ne terrà conto durante il progetto.</p>
 		</li>
 		<li><strong>Generale</strong>
 			<p>Con l’iscrizione il genitore si dichiara d’accordo con le condizioni sopra citate. Per ulteriori chiarimenti si prega di non esitare a consultare i collaboratori dello Jugenddienst Bozen.</p>
