2 new reservation props: isSiblingReservation, acceptsOptionalFee

--- a/public/templates/eventEdit.html
+++ b/public/templates/eventEdit.html
@@ -136,7 +136,7 @@
 	</div>	
 	<!-- OPTIONALFEEPERWEEK -->
 	<div class='form-group' ng-class='{ "has-error": eventForm.optionalFeePerWeek.$invalid }'>
-		<label for='optionalFeePerWeek' class='control-label col-sm-2'>freiwilliger Preis</label>
+		<label for='optionalFeePerWeek' class='control-label col-sm-2'>freiwilliger Aufpreis</label>
 		<div class='col-sm-10'>
 			<p class='input-group'>
 				<input type='number' ng-model='optionalFeePerWeek' step='0.01' class="form-control" required></input>
