minor fixing ui

--- a/public/templates/agb/agb-kiso-de.html
+++ b/public/templates/agb/agb-kiso-de.html
@@ -1,5 +1,6 @@
 <div class="container">
 	<h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen</h2>
+	<div class="col-sm-8">
 	<ol>
 		<li><strong>Anmeldung</strong>
 			<ul>
@@ -37,4 +38,5 @@
 			<p>Mit der Anmeldung erklärt sich das Elternteil und Erziehungsberechtigter mit obigen Bedingungen einverstanden. Für Rückfragen stehen die MitarbeiterInnen des Jugenddienst Bozen gerne zur Verfügung.</p>
 		</li>
 	</ol>
+	</div>
 </div>
