--- a/public/templates/agb/agb-kiso-it.html
+++ b/public/templates/agb/agb-kiso-it.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <h2 class='text-orange'>Condizioni e termini</h2>
+	<h2 class='text-orange'>Condizioni e termini</h2>
+	<div class="col-sm-8">
 	<ol>
 		<li><strong>Iscrizione</strong>
 			<ul>
@@ -36,4 +37,5 @@
 			<p>Con l’iscrizione il genitore si dichiara d’accordo con le condizioni sopra citate. Per ulteriori chiarimenti si prega di non esitare a consultare i collaboratori dello Jugenddienst Bozen.</p>
 		</li>
 	</ol>
+	</div>
 </div>
