add new reg fields to report Kiso

--- a/public/templates/agb/agb-kiso-de.html
+++ b/public/templates/agb/agb-kiso-de.html
@@ -31,7 +31,7 @@
 			<p>Alle KiSo-TeilnehmerInnen sind während der Austragung des Programms über die von der Arbeitsgemeinschaft der Jugenddienste (AGJD) abgeschlossene Haftpflichtversicherung auf Schäden gegen Dritte gedeckt.</p>
 			<p>Die Eltern bzw. Erziehungsberechtigten übernehmen die Verantwortung für den Hin- und Rückweg des Kindes zum KiSo-Austragungsort. Untertags werden die Kinder von den BetreuerInnen beaufsichtigt.</p>
 		</li>
-		<li><strong>Beeinträchtigung und Aufsicht</strong>
+		<li><strong>Beeinträchtigung und Unverträglichkeiten</strong>
 			<p>Bei jeglichen körperlichen oder geistigen Beeinträchtigungen bzw. Nahrungsmittel-Unverträglichkeiten eines teilnehmenden Kindes müssen die Eltern innerhalb einer Frist von zwei Wochen ab erfolgter Anmeldung dem Jugenddienst Bozen ein entsprechendes ärztliches Zeugnis vorlegen. Andernfalls wird der Jugenddienst Bozen dies während des Projekts nicht berücksichtigen.</p>
 		</li>
 		<li><strong>Allgemein</strong>
