--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -159,6 +159,8 @@
 			<th ng-show='platform.isJDUL()'>Kann Schwimmen</th>
 			<th ng-show='platform.isJDUL()'>Darf allein nach Hause</th>
 			<th ng-show='platform.isJDUL()'>Kommentar Intern</th>
+			<th ng-show='platform.isKiso()'>Media</th>
+			<th ng-show='platform.isKiso()'>News</th>
 			<th>Anmeldedatum</th>
 		</tr>
 		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
@@ -194,6 +196,8 @@
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canSwim)}}</td>
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canGoHomeAllone)}}</td>
 			<td ng-show='platform.isJDUL()'>{{reg.commentInternal}}</td>
+			<td ng-show='platform.isKiso()'>{{formatBool(reg.acceptsMediaPublication)}}</td>
+			<td ng-show='platform.isKiso()'>{{formatBool(reg.acceptsNewsletter)}}</td>
 			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>	
 		</tr>
 		<tr><td></td><td></td><td></td><td></td><td colspan='8'>Summe:</td><td align='right'>{{calculateOverallFee(registrations)}}</td><td colspan='17'></td></tr>
@@ -228,6 +232,8 @@
 			<th ng-show='platform.isJDUL()'>Kann Schwimmen</th>
 			<th ng-show='platform.isJDUL()'>Darf allein nach Hause</th>
 			<th ng-show='platform.isJDUL()'>Kommentar Intern</th>
+			<th ng-show='platform.isKiso()'>Media</th>
+			<th ng-show='platform.isKiso()'>News</th>
 			<th>Anmeldedatum</th>
 		</tr>
 		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
@@ -259,6 +265,8 @@
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canSwim)}}</td>
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canGoHomeAllone)}}</td>
 			<td ng-show='platform.isJDUL()'>{{reg.commentInternal}}</td>
+			<td ng-show='platform.isKiso()'>{{formatBool(reg.acceptsMediaPublication)}}</td>
+			<td ng-show='platform.isKiso()'>{{formatBool(reg.acceptsNewsletter)}}</td>
 			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>	
 		</tr>
 	</table>
