--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -10,7 +10,8 @@
 			<div id="collapseOne" ng-class="(currentState === 1) ? 'panel-collapse collapse in' : 'panel-collapse collapse'" role="tabpanel" aria-labelledby="headingOne">
 				<div class="panel-body">
 					<div class='container'>
-						<button ng-show='hasCachedRegistration()' ng-click='updateFromCache()' class='btn btn-success bnt-lg col-sm-offset-2'>{{"RESERVATION.LABEL_LOAD_PREVIOUS" | translate}}</button>
+						<button ng-show='hasCachedRegistration()' ng-click='updateFromCache()' class='btn btn-success col-sm-offset-2'>{{"RESERVATION.LABEL_LOAD_PREVIOUS" | translate}}</button>
+						<button ng-show='hasCachedRegistration() && (platform.isKiso() || platform.isTest())' ng-click='updateSiblingFromCache()' class='btn btn-success col-sm-offset-2'>{{"RESERVATION.LABEL_LOAD_SIBLING" | translate}}</button>
 						<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
 								
 						<div ng-show='type === "summer" || type === "music" || type === "club" || type == "jumprun"' class='text-orange'><strong>{{"RESERVATION.HEADER_SUMMER_PARENT" | translate}}</strong></div>
@@ -19,48 +20,48 @@
 						<div class='form-group' ng-class='{ "has-error": registrationForm.firstNameParent.$invalid }'>
 							<label for='firstNameParent' class='control-label col-sm-2'>{{"RESERVATION.LABEL_FIRSTNAME_PARENT" | translate}}</label>
 							<div class='col-sm-8'>
-								<input name='firstNameParent' type='text' ng-model='firstNameParent' required maxlength='100' class='form-control'></input>
+								<input name='firstNameParent' type='text' ng-disabled="disabledForSibling" ng-model='firstNameParent' required maxlength='100' class='form-control'></input>
 							</div>
 						</div>
 						<!-- LASTNAMEPARENT -->
 						<div class='form-group' ng-class='{ "has-error": registrationForm.lastNameParent.$invalid }'>
 							<label for='lastNameParent' class='control-label col-sm-2'>{{"RESERVATION.LABEL_LASTNAME_PARENT" | translate}}</label>
 							<div class='col-sm-8'>
-								<input name='lastNameParent' type='text' ng-model='lastNameParent' class='form-control' required maxlenght='100'></input>
+								<input name='lastNameParent' type='text' ng-disabled="disabledForSibling" ng-model='lastNameParent' class='form-control' required maxlenght='100'></input>
 							</div>
 						</div>
 						<!-- PHONENUMBERPARENT -->
 						<div class='form-group' ng-class='{ "has-error": registrationForm.phoneNumberParent.$invalid }'>
 							<label for='phoneNumberParent' class='control-label col-sm-2'>{{"RESERVATION.LABEL_TEL_PARENT" | translate}}</label>
 							<div class='col-sm-8'>
-								<input name='phoneNumberParent' type='tel' ng-model='phoneNumberParent' required maxlength='150' class='form-control'></input>
+								<input name='phoneNumberParent' type='tel' ng-disabled="disabledForSibling" ng-model='phoneNumberParent' required maxlength='150' class='form-control'></input>
 							</div>
 						</div>
 						<!-- EMAILPARENT -->
 						<div class='form-group' ng-class='{ "has-error": registrationForm.emailParent.$invalid }'>
 							<label for='emailParent' class='control-label col-sm-2'>{{"RESERVATION.LABEL_MAIL_PARENT" | translate}}</label>
 							<div class='col-sm-8'>
-								<input name='emailParent' type='email' ng-model='emailParent' required maxlength='200' class='form-control'></input>
+								<input name='emailParent' type='email' ng-disabled="disabledForSibling" ng-model='emailParent' required maxlength='200' class='form-control'></input>
 							</div>
 						</div>
 						<div class='form-group' ng-class='{ "has-error": registrationForm.emailParentCheck.$invalid || !isEmailEqual() }'>
 							<label for='emailParentCheck' class='control-label col-sm-2'>{{"RESERVATION.LABEL_MAIL_PARENT_CHECK" | translate}}</label>
 							<div class='col-sm-8'>
-								<input name='emailParentChek' type='email' ng-model='emailParentCheck' maxlength='200' class='form-control'></input>
+								<input name='emailParentChek' type='email' ng-disabled="disabledForSibling" ng-model='emailParentCheck' maxlength='200' class='form-control'></input>
 							</div>
 						</div>
 						<!-- ADDRESSCHILD -->
 						<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }'>
 							<label for='addressChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_ADDRESS_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
-								<input name='addressChild' type='text' ng-model='addressChild' maxlength='100' class='form-control' required></input>
+								<input name='addressChild' type='text' ng-model='addressChild' ng-disabled="disabledForSibling" maxlength='100' class='form-control' required></input>
 							</div>
 						</div>
 						<!-- CITYCHILD -->
 						<div class='form-group' ng-class='{ "has-error": registrationForm.cityChild.$invalid }'>
 							<label for='cityChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_CITY_CHILD" | translate}}</label>
 							<div class='col-sm-8' ng-show="!platform.isJDUL()">
-								<select name='cityChild' class='sel-base form-control' ng-model='cityChild'>
+								<select name='cityChild' class='sel-base form-control' ng-disabled="disabledForSibling" ng-model='cityChild'>
 									<option ng-repeat="city in cities" value='{{city}}'>{{city}}</option>
 								</select>
 							</div>
@@ -81,7 +82,7 @@
 						<div class='form-group' ng-class='{ "has-error": registrationForm.lastNameChild.$invalid }'>
 							<label for='lastNameChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_LASTNAME_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
-								<input name='lastNameChild' type='text' ng-model='lastNameChild' class='form-control' required maxlenght='100'></input>
+								<input name='lastNameChild' type='text' ng-model='lastNameChild' ng-disabled="disabledForSibling" class='form-control' required maxlenght='100'></input>
 							</div>
 						</div>
 						<!-- BIRTHDAYCHILD -->
@@ -217,9 +218,9 @@
 						<ul class='list-group'>
 							<li ng-repeat='activity in activities' class='list-group-item'>
 								<div class='row'>
-									<div class='col-sm-1' ng-disabled='isReserveable(activity)'>
+									<div class='col-sm-1' ng-disabled='canNotReserve(activity)'>
 										<input ng-show="!platform.isKiso()" type="checkbox" value="" ng-disabled='canNotReserve(activity)' ng-click="toggleActivity(activity._id)">
-										<input ng-show="platform.isKiso()" type="radio" name="activities" value="" ng-disabled='canNotReserve(activity)' ng-click="toggleActivity(activity._id)">
+										<input ng-show="platform.isKiso()" type="radio" name="acts" value="" ng-disabled='canNotReserve(activity)' ng-click="toggleActivity(activity._id)">
 									</div>
 									<div class='col-sm-3'>
 										<strong ng-show="lang == 'de'">{{activity.name}}</strong>
