label changes Kiso

--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -30,7 +30,7 @@
 	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
 	<br />
 	<br />
-	<h2><strong>Unsere Projektwochen für Mittelschüler*innen</strong></h2>
+	<h2><strong>Unsere Sommerprojekte für Kids von 11-15 Jahren</strong></h2>
 	<h4>Anmeldung ab <strong><time>15. März 2019</time></strong></h4>
 	<h3>Film ab</h3>
 	<img src="./../../../../assets/Kiso_Film.jpg" style="height:110px;float:left;margin-right:15px" />
