--- a/public/templates/commitmentEdit.html
+++ b/public/templates/commitmentEdit.html
@@ -17,6 +17,13 @@
 			<textarea name='description' type='text' ng-model='description' class='form-control' rows='3' placehoder='Hinweis eintragen' ></textarea>
 		</div>
 	</div>
+	<!-- RNUMBER -->
+	<div class='form-group' ng-class='{ "has-error": comForm.rnumber.$invalid }'>
+		<label for='drnumber' class='control-label col-sm-2'>RechnungsNr</label>
+		<div class='col-sm-10'>
+			<input name='rnumber' type='text' ng-model='rnumber' class='form-control'></input>
+		</div>
+	</div>
 	<!-- DATE -->
 	<div class='form-group' ng-class='{ "has-error": comForm.date.$invalid }'>
 		<label for='date' class='control-label col-sm-2'>Datum</label>
