--- a/public/templates/shop/reservation.html
+++ b/public/templates/shop/reservation.html
@@ -25,14 +25,14 @@
                                 <div class='form-group' ng-class='{ "has-error": reservationForm.lender.$invalid }'>
                                     <label for='lender' class='control-label col-sm-2'>Ausleiher/in</label>
                                     <div class='col-sm-8'>
-                                        <input name='lender' type='text' ng-model='lender' class='form-control' required maxlenght='100'></input>
+                                        <input name='lender' type='text' ng-model='lender' class='form-control' required maxlenght='100' readonly></input>
                                     </div>
                                 </div>
                                 <!-- PHONENUMBER -->
                                 <div class='form-group' ng-class='{ "has-error": reservationForm.phoneNumber.$invalid }'>
                                     <label for='phoneNumber' class='control-label col-sm-2'>Tel.Nr. Kontakt</label>
                                     <div class='col-sm-8'>
-                                        <input name='phoneNumber' type='tel' ng-model='phoneNumber' required maxlength='150' class='form-control'></input>
+                                        <input name='phoneNumber' type='tel' ng-model='phoneNumber' required maxlength='150' readonly class='form-control'></input>
                                     </div>
                                 </div>
                                 <!-- FROM -->
