--- a/public/templates/reportPresence.html
+++ b/public/templates/reportPresence.html
@@ -27,12 +27,15 @@
 	</div>
 	</div>
 
-	<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
+	
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
 	<table id="datatable" class='table table-bordered'>
 		<table class='table table-striped table-bordered'  ng-repeat='grp in registrations'>
 		<thead>
 		<tr>
+			<th>
+				<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, this.rowIndex+'data', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
+			</th>
 			<th>{{grp[0].activityId.eventId.location}} - {{grp[0].activityId.eventId.name}}</th>
 			<th>{{grp[0].activityId.name}}</th>
 			<th>Vorname</th>
@@ -43,8 +46,9 @@
 			</th>
 		</tr>
 		</thead>
-		<tbody>
+		<tbody id={{this.rowIndex}}data>
 			<tr ng-repeat='reg in grp'>
+				<td></td>
 				<td></td>
 				<td></td>
 				<td>{{reg.firstNameChild}}</td>
