--- a/public/templates/reportPresence.html
+++ b/public/templates/reportPresence.html
@@ -16,6 +16,19 @@
 				</span>
 			</div>
 		</div>
+		<div class='row' style='margin-top:10px'>
+				<label for='activityFilter' class='control-label col-sm-2'>Woche:</label>
+				<div class='col-sm-5 input-group'>
+					<select id='activityFilter' class='form-control' ng-model='activityIdFilter' ng-change='updateActivityFilter(false)'>
+						<option ng-repeat='activity in activities' value='{{activity._id}}'>{{activity.name}}</option>
+					</select>
+					<span class='input-group-btn'>
+						<button class='btn btn-info' ng-click='clearActivitySelection()'>
+							<span class="glyphicon glyphicon-remove"></span>
+						</button>
+					</span>
+				</div>
+			</div>
 		<div class="row" style='margin-top:10px'>
     	<div class='col-sm-offset-2 col-sm-4'>
       	<button type='button' class='btn btn-primary btn-block' ng-click='getReportData()'>Laden</button>
@@ -29,13 +42,11 @@
 
 	
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
+	<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'data', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
 	<table id="datatable" class='table table-bordered'>
-		<table class='table table-striped table-bordered'  ng-repeat='grp in registrations'>
+		<table class='table table-striped table-bordered' id="data" ng-repeat='grp in registrations'>
 		<thead>
 		<tr>
-			<th>
-				<a download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, this.rowIndex+'data', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
-			</th>
 			<th>{{grp[0].activityId.eventId.location}} - {{grp[0].activityId.eventId.name}}</th>
 			<th>{{grp[0].activityId.name}}</th>
 			<th>Vorname</th>
@@ -46,9 +57,8 @@
 			</th>
 		</tr>
 		</thead>
-		<tbody id={{this.rowIndex}}data>
+		<tbody>
 			<tr ng-repeat='reg in grp'>
-				<td></td>
 				<td></td>
 				<td></td>
 				<td>{{reg.firstNameChild}}</td>
