--- a/public/templates/eventRegistration.html
+++ b/public/templates/eventRegistration.html
@@ -25,7 +25,8 @@
 	</div>
 	</div>
 
-	<a download="export.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
+	<a ng-show="!platform.isJugendsommer()" download="export.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
+	<a ng-show="platform.isJugendsommer()" download="export.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable_js', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
     <table id='datatable' class='table table-striped table-bordered tbl-serial1'>
 		<tr>
 			<th></th>
@@ -63,6 +64,49 @@
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canSwim)}}</td>
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canGoHomeAllone)}}</td>
 			<td ng-show='platform.isJDUL()'>{{reg.commentInternal}}</td>
+			<td>{{reg.addressChild}}</td>
+			<td>{{reg.cityChild}}</td>
+			<td>{{reg.firstNameParent}}</td>
+			<td>{{reg.lastNameParent}}</td>
+			<td><a href='mailto:{{reg.emailParent}}'>{{reg.emailParent}}</a></td>
+			<td>{{reg.phoneNumberParent}}</td>
+			<td>{{reg.nameContact1}}</td>
+			<td>{{reg.telContact1}}</td>
+			<td>{{reg.nameContact2}}</td>
+			<td>{{reg.telContact2}}</td>
+			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>
+		</tr>
+	</table>
+
+	<table id='datatable_js' class='hidden'>
+		<tr>
+			<th></th>
+			<th>Woche</th>
+			<th>Vorname</th>
+			<th>Nachname</th>
+			<th>Geburtstag</th>
+			<th>Schulstufe</th>
+			<th>Gesundheit</th>
+			<th>Adresse</th>
+			<th>Wohnort</th>
+			<th>Vorname Eltern</th>
+			<th>Nachname Eltern</th>
+			<th>Email Eltern</th>
+			<th>Tel. Eltern</th>
+			<th>Kontakt1</th>
+			<th>Tel. Kontakt1</th>
+			<th>Kontak2</th>
+			<th>Tel. Kontakt2</th>
+			<th>Anmeldedatum</th>
+		</tr>
+		<tr ng-repeat='reg in registrations | orderBy:colNameSort'>
+			<td></td>
+			<td>{{reg.activityId.name}}</td>
+			<td>{{reg.firstNameChild}}</td>
+			<td>{{reg.lastNameChild}}</td>
+			<td>{{reg.birthdayChild | date: 'dd/MM/yyyy'}}</td>
+			<td>{{reg.schoolChild}}</td>
+			<td>{{reg.healthChild}}</td>
 			<td>{{reg.addressChild}}</td>
 			<td>{{reg.cityChild}}</td>
 			<td>{{reg.firstNameParent}}</td>
