disable button for confirmation check if input is not complete

--- a/public/templates/filterConfirmation.html
+++ b/public/templates/filterConfirmation.html
@@ -37,7 +37,7 @@
 			</div>
 		<div class="row" style='margin-top:10px'>
     	<div class='col-sm-offset-2 col-sm-4'>
-      	<button type='button' class='btn btn-primary btn-block' ng-click='send()'>Senden</button>
+      	<button type='button' class='btn btn-primary btn-block' ng-click='send()' ng-disabled='!canSend(selectedChild)'>Senden</button>
   		</div>
 		</div>
 	</div>
