--- a/public/templates/filterConfirmation.html
+++ b/public/templates/filterConfirmation.html
@@ -7,7 +7,7 @@
 			<label for='eventFilter' class='control-label col-sm-2'>Progr.:</label>
 			<div class='col-sm-5 input-group'>
 				<select id='eventFilter' class='form-control' ng-model='eventId' ng-change='updateEventFilter()'>
-					<option ng-repeat='event in events' value='{{event._id}}'>{{event.name}}</option>
+					<option ng-repeat='event in events' value='{{event._id}}'>{{event.location + ' - ' + event.name}}</option>
 				</select>
 				<span class="input-group-btn">
 					<button class='btn btn-info' ng-click='clearEventSelection()'>
